name:                guessingGame
version:             0.1.0.0
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GuessingGame
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable guessing-game-exe
  hs-source-dirs:      guessingGame
  main-is:             Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base
   , gcj
   , guessingGame
